# OOP-ICT-2022

./: README.md
homework-1/: .gitignore
homework-1/labs_src/: CMakeLists.txt
homework-1/labs_src/lab1/: ClosedPolyline.cpp  ClosedPolyline.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  RegularPolygon.cpp  RegularPolygon.h  Trapeze.cpp  Trapeze.h  Triangle.cpp  Triangle.h
homework-1/labs_tests/: lab1_tests.cpp
homework-2/: CMakeLists.txt
homework-2/number/: number.cpp  number.h
homework-2/trie/: trie.cpp  trie.h
homework-4/: phone-book.cpp  phone-book.h
homework-5/: CMakeLists.txt
homework-5/game/: sea-battle.cpp  sea-battle.h
homework-5/players/: human-player.cpp  human-player.h  smart-ai-player.cpp  smart-ai-player.h
project-hotel/: README.md
project-hotel/labs_src/: CMakeLists.txt
project-hotel/labs_src/hotel/: Book.cpp  Book.h  Clients.cpp  Clients.h  Rooms.cpp  Rooms.h  Workers.cpp  Workers.h
project-hotel/labs_tests/: CMakeLists.txt  hotel_tests.cpp
